[gd_scene load_steps=10 format=3 uid="uid://terc54jg7ob3"]

[ext_resource type="Script" path="res://scenes/HUD.gd" id="1_gfryp"]
[ext_resource type="FontFile" uid="uid://cqdj0do7i55t7" path="res://Xolonium-Regular.ttf" id="2_qe6ru"]
[ext_resource type="Script" path="res://scenes/HSlider.gd" id="3_a7f7f"]

[sub_resource type="InputEventAction" id="InputEventAction_86tta"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_jvoix"]
events = [SubResource("InputEventAction_86tta")]

[sub_resource type="InputEventAction" id="InputEventAction_5v40d"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_tyf1t"]
events = [SubResource("InputEventAction_5v40d")]

[sub_resource type="InputEventAction" id="InputEventAction_et6tx"]
action = &"pause_game"

[sub_resource type="Shortcut" id="Shortcut_ypwq8"]
events = [SubResource("InputEventAction_et6tx")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_gfryp")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_qe6ru")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_qe6ru")
theme_override_font_sizes/font_size = 64
text = "Dodge Kiisu"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="highscoreText" type="Label" parent="."]
offset_left = 1096.0
offset_top = 8.0
offset_right = 1284.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("2_qe6ru")
theme_override_font_sizes/font_size = 16
text = "Highscore: "

[node name="Highscore" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = -8.0
offset_bottom = 61.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_qe6ru")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -139.0
offset_top = -142.0
offset_right = 140.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_qe6ru")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_jvoix")
text = "Resume"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_qe6ru")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_tyf1t")
text = "Start"

[node name="PauseButton" type="Button" parent="."]
offset_left = 13.0
offset_top = 13.0
offset_right = 95.0
offset_bottom = 54.0
theme_override_fonts/font = ExtResource("2_qe6ru")
shortcut = SubResource("Shortcut_ypwq8")
text = "Pause"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="HSlider" type="HSlider" parent="."]
visible = false
offset_left = 107.0
offset_top = -9.0
offset_right = 411.0
offset_bottom = 75.0
max_value = 50.0
script = ExtResource("3_a7f7f")

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="value_changed" from="HSlider" to="HSlider" method="_on_value_changed"]
